--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -259,7 +259,7 @@ Research done points to these being the strongest aspects of the developed model
 \item Different values of sail pitch angle are tried in order to achieve a better approach to Mars. 
 \item The model developed allows for the sail angle to be non-constant over time, which enabled the investigation of more complex orbits to achieve the desired goal.
 \end{itemize}
-On the other hand work done has also some points than in a certain way could be improved. These are:
+On the other hand work done has also some points that in a certain way could be improved. These are:
 \begin{itemize}
 	\item The initial given conditions do not allow the model to predict a flight plan that guarantees that the sail will get close enough to Mars to enter its gravitational field
 	\item The simulations do not consider Mars' gravitational attraction. Even though this  is a non issue for virtually all of the orbit, it becomes relevant in the last stages of the trip when the sail approaches Mars.
