--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -29,7 +29,7 @@
 
 \author{\textsf{Team 891}}
 \title{\textsf{\textbf{Problem A: Solar Sailing from Earth to Mars}}}
-\date{\textsf{November 12, 2017}}
+\date{}
 \makeindex
 
 \begin{document}
